--- a/admin/src/app/components/sale-purchase-shared/add-or-edit/add-or-edit.component.html
+++ b/admin/src/app/components/sale-purchase-shared/add-or-edit/add-or-edit.component.html
@@ -46,7 +46,7 @@
 								placeholder="Date"
 								name="date"
 								[(ngModel)]="object.date"
-								rewuired
+								required
 							/>
 							<mat-error>
 								Date is
@@ -121,7 +121,7 @@
 								</mat-option>
 							</mat-select>
 							<mat-error>
-								Company Head is
+								Party is
 								<strong>required</strong>
 							</mat-error>
 						</mat-form-field>
