--- a/admin/src/app/components/sale-purchase-shared/add-or-edit/add-or-edit.component.html
+++ b/admin/src/app/components/sale-purchase-shared/add-or-edit/add-or-edit.component.html
@@ -184,12 +184,38 @@
 				<div class="form-group row">
 					<div class="col-lg-3 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
+							<!-- <mat-label>Item</mat-label>
+							<input
+								type="text"
+								placeholder="Pick one"
+								matInput
+								[formControl]="selectedItemControl"
+								[matAutocomplete]="auto"
+							/>
+							<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+								<mat-option
+									*ngFor="let item of filteredItems | async"
+									[value]="item"
+								>
+									{{ item.name }}
+								</mat-option>
+							</mat-autocomplete> -->
 							<mat-select
 								[(ngModel)]="selectedItem.id"
 								placeholder="Enter Item"
 								name="item"
 							>
-								<mat-option *ngFor="let item of items" [value]="item.id">
+								<mat-option>
+									<ngx-mat-select-search
+										[formControl]="filteredItemsCtrl"
+										placeholderLabel="Search Items"
+										noEntriesFoundLabel="'no matching Item found'"
+									></ngx-mat-select-search>
+								</mat-option>
+								<mat-option
+									*ngFor="let item of filteredItems | async"
+									[value]="item.id"
+								>
 									{{ item.name }}
 								</mat-option>
 							</mat-select>
