payments child tax

--- a/admin/src/app/components/invoice/invoice.component.scss
+++ b/admin/src/app/components/invoice/invoice.component.scss
@@ -99,10 +99,10 @@ th {
 }
 
 @media print {
-	* {
-		visibility: hidden;
+	.no-print {
+		visibility: hidden !important;
 	}
-	.print{
+	.print {
 		visibility: visible !important;
 	}
 }
