--- a/admin/src/app/pages/ledger/ledger.component.html
+++ b/admin/src/app/pages/ledger/ledger.component.html
@@ -1,5 +1,5 @@
 <div class="card card-custom">
-	<div class="card-header">
+	<div class="card-header no-print">
 		<div class="card-title">
 			<h3>Ledger</h3>
 		</div>
@@ -83,6 +83,16 @@
 
 <div *ngIf="loaded; else loader">
 	<div class="card card-custom mt-5">
+		<div class="card-header">
+			<div class="card-title">
+				<!-- <h3>Ledger</h3> -->
+			</div>
+			<div class="card-toolbar">
+				<button class="btn btn-primary" [disabled]="!loaded" (click)="print()">
+					Print
+				</button>
+			</div>
+		</div>
 		<div class="card-body" *ngIf="ledger.length; else no_data">
 			<div class="row border border-dark mb-3">
 				<div class="col font-weight-boldest">Date</div>
